--- a/app/main.css
+++ b/app/main.css
@@ -101,6 +101,13 @@ canvas{
 	width: 100%;
 	height: 100%;
 }
+#graphics{
+	display:block;
+	background: #222222;
+	width: 100%;
+	height: 100%;
+	top: 5px;
+}
 
 #terminal{
 	cursor: text;
