--- a/app/main.css
+++ b/app/main.css
@@ -123,7 +123,10 @@ canvas{
 	padding: 0;
 	border: none;
 	width: 100%;
-	height: 50%;
+	height: 50%; 
 	background: #000;
 	color: #0f0;
+}
+textarea{
+	height: 300px;
 }
